Simplify optimizer status response
